Added a public ip address

--- a/cloudfront-templates/shell-experiment.template
+++ b/cloudfront-templates/shell-experiment.template
@@ -54,8 +54,14 @@
                 "InstanceType" : "t2.micro",
                 "KeyName" : { "Ref": "KeyPairName" },
                 "Monitoring" : true,
-                "SecurityGroupIds" : [ { "Ref": "SecurityGroupID" } ],
-                "SubnetId" : { "Ref": "SubnetID" }
+                "NetworkInterfaces": [
+                    {
+                        "AssociatePublicIpAddress": "true",
+                        "DeviceIndex": "0",
+                        "GroupSet": [ { "Ref" : "SecurityGroupID" } ],
+                        "SubnetId": { "Ref" : "SubnetID" }
+                    }
+                ]
             }
         }
     },
