--- a/cloudfront-templates/shell-experiment.template
+++ b/cloudfront-templates/shell-experiment.template
@@ -26,16 +26,6 @@
             "Default" : "ami-d732f0b7",
             "Type" : "AWS::EC2::Image::Id"
         },
-        "BravoAmi" : {
-            "Description" : "The AMI to create the Bravo instance from.",
-            "Default" : "ami-d732f0b7",
-            "Type" : "AWS::EC2::Image::Id"
-        },
-        "CharlieAmi" : {
-            "Description" : "The AMI to create the Charlie instance from.",
-            "Default" : "ami-d732f0b7",
-            "Type" : "AWS::EC2::Image::Id"
-        },
         "KeyPairName" : {
             "Description" : "The name of the key pair to bind the instances to.",
             "Type" : "AWS::EC2::KeyPair::KeyName"
@@ -49,6 +39,24 @@
     "Resources" : {
         "AlphaInstance" : {
             "Type" : "AWS::EC2::Instance",
+            "Metadata": {
+                 "AWS::CloudFormation::Init" : {
+                     "files": {
+                         "/tmp/go.sh": {
+                             "source": "https://s3-us-west-2.amazonaws.com/tlwest2/rkurr/echo.sh",
+                             "group": "root",
+                             "owner": "root",
+                             "mode": "000744"
+                         }
+                     },
+                     "commands": {
+                         "experiment": {
+                             "command": ["/tmp/go.sh", "Devan"],
+                             "env" : { "MAGIC" : "I come from the environment!" }
+                         }
+                     }
+                 }
+            },
             "Properties" : {
                 "ImageId" : { "Ref": "AlphaAmi" },
                 "InstanceType" : "t2.micro",
